continue the project still its not fully completed

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,95 @@
             </div>
         </div>
     </div>
+
+    <!-- parthnership -->
+    <div class="partnership max-w-5xl mx-auto mt-12 border-t border-b py-12 lg:px-0 md:px-4 px-8">
+        <div class="title text-center w-full text-sm">TRUSTED BY YOUR FAVORED TOP TECHS COMPANIES</div>
+        <div class="parthners-lo flex justify-between mt-10 brightness-75 grayscale contrast-200">
+            <img class="h-8 lg:h-10" src="../Images/airbnb.svg" alt="">
+            <img class="h-8 lg:h-10" src="../Images/coty.svg" alt="">
+            <img class="h-8 lg:h-10" src="../Images/ge.svg" alt="">
+            <img class="h-8 lg:h-10" src="../Images/lilly.png" alt="">
+            <img class="h-8 lg:h-10" src="../Images/microsoft.svg" alt="">
+        </div>
+    </div>
+
+    <!-- growing teams -->
+    <div class="growing-teams mt-40 max-w-5xl mx-auto lg:px-0 md:px-4 px-8">
+        <div class="team-main-text">
+            <div class="title text-center text-3xl font-bold text-gray-800 md:text-4xl xl:text-5xl">For growing
+                teams and organizations
+            </div>
+            <div class="small-text text-center mx-0 md:mx-20 lg:mx-36 my-8 text-gray-700">A growing team doesn't need
+                to mean growing
+                pains. Privacy,
+                and
+                the
+                right tool for
+                every step of your journey - Jira Software friction - company size.</div>
+        </div>
+
+        <!-- tabs -->
+        <div
+            class="tabs mx-auto bg-gray-100 border border-gray-200 h-12 px-[3px] w-fit flex justify-between items-center gap-4 rounded-full">
+            <div
+                class="px-4 hover:text-sky-800 transition cursor-pointer bg-white h-10 rounded-full flex items-center shadow-md">
+                First Tab</div>
+            <div class="px-4 hover:text-sky-800 transition cursor-pointer">Second Tab</div>
+            <div class="px-4 hover:text-sky-800 transition cursor-pointer">Third Tab</div>
+        </div>
+
+        <div class="mt-20">
+            <div class="space-y-12 gap-6 md:flex md:space-y-0 overflow-hidden">
+                <div class="left-part md:w-1/2 flex flex-col justify-center">
+                    <div class="text-2xl font-semibold text-gray-900 md:text-3xl">Make work flow
+                        across teams while connecting back to company goals</div>
+                    <div class="mt-8 text-gray-600">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum omnis voluptatem accusantium nemo
+                        perspiciatis delectus atque autem! repellat expedita consequatur! Officiis id consequatur atque
+                        doloremque!
+                    </div>
+                    <div class="mt-10">
+                        <div class="flex gap-6 items-center">
+                            <div class="flex justify-center items-center p-4 rounded-3xl border w-20 h-20">
+                                <img src="../Images/cubes.png" class="h-8">
+                            </div>
+                            <div class="text-part">
+                                <div class="text-lg font-semibold text-gray-800">Together as one</div>
+                                <div class="mt-1 text-gray-600">Accusantium nemo perspiciatis delectus atque autem!
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex gap-6 items-center mt-10">
+                            <div class="flex justify-center items-center p-4 rounded-3xl border w-20 h-20">
+                                <img src="../Images/stairs.png" class="h-8">
+                            </div>
+                            <div class="text-part">
+                                <div class="text-lg font-semibold text-gray-800">New ideas</div>
+                                <div class="mt-1 text-gray-600">Accusalectus atque autem accusantium nemo perspiciatis
+                                    delectus atque autem!
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="-m-4 overflow-hidden p-4 sm:-mx-12 sm:px-12 md:mx-0 md:w-1/2 md:overflow-visible md:px-0">
+                    <div
+                        class="relative bg-gray-100 before:absolute before:inset-0 before:scale-x-110 before:border-y before:border-gray-200 after:absolute after:inset-0 after:scale-y-110 after:border-x after:border-gray-200">
+                        <div class="relative h-96 overflow-clip py-10 sm:h-[32rem] lg:p-20">
+                            <div
+                                class="absolute inset-0 z-10 flex translate-y-0 scale-100 items-end overflow-hidden px-6 opacity-100 transition duration-500 sm:px-10">
+                                <img src="../Images/tailus-home.webp"
+                                    class="mx-auto h-80 w-96 rounded-t-3xl border object-cover object-top shadow-2xl dark:border-transparent sm:h-[28rem]">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- font awsome -->
     <script src="https://kit.fontawesome.com/f900e39f72.js" crossorigin="anonymous"></script>
 </body>
 
