added the development section

--- a/src/index.html
+++ b/src/index.html
@@ -180,6 +180,32 @@
         </div>
     </div>
 
+    <!-- development -->
+    <div class="development-section mt-40 max-w-5xl mx-auto lg:px-0 md-px-4 px-8">
+        <div class="space-y-6 md:flex lg:items-center lg:gap-6 lg:space-y-0">
+            <div class="md:5/12 lg:w-6/12">
+                <img src="../Images/stats-login.webp" class="md:-ml-8" width="1779" height="1592">
+            </div>
+            <div class="right-part md:7/12 lg:w-6/12">
+                <div class="title text-2xl font-bold text-gray-800 md:text-3xl xl:text-4xl">Development
+                    is
+                    carried out by passionate developers
+                </div>
+                <div class="mt-8 text-gray-600">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum omnis
+                    voluptatem accusantium nemo
+                    perspiciatis delectus atque autem! repellat expedita consequatur! Officiis id consequatur atque
+                    doloremque!</div>
+                <div class="mb-12 mt-4 text-gray-600">Nobis minus voluptatibus pariatur dignissimos libero quaerat iure
+                    expedita at? Asperiores nemo
+                    possimus nesciunt dicta veniam aspernatur quam mollitia.</div>
+                <div
+                    class="relative flex h-11 w-max items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-blue-600 before:transition-transform before:duration-300 active:duration-75 active:before:scale-95 hover:before:bg-blue-700 cursor-pointer">
+                    <span class="relative text-base font-semibold text-white">Get started</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- font awsome -->
     <script src="https://kit.fontawesome.com/f900e39f72.js" crossorigin="anonymous"></script>
 </body>
