finished the leaders section

--- a/src/index.html
+++ b/src/index.html
@@ -206,6 +206,141 @@
         </div>
     </div>
 
+    <!-- technology -->
+    <div class="technology-section mt-40 max-w-5xl mx-auto lg:px-0 md:px-4 px-8">
+        <div class="team-main-text">
+            <div class="title text-center text-3xl font-bold text-gray-800 md:text-4xl xl:text-5xl">A technology-first
+                approach
+            </div>
+            <div class="small-text text-center mx-0 md:mx-20 lg:mx-36 my-8 text-gray-700">A growing team doesn't need to
+                mean growing pains. Privacy, and the right tool for every step of your journey - Jira Software friction
+                - company size.</div>
+        </div>
+        <div class="technologies mt-16 grid gap-8 sm:mx-auto sm:w-2/3 md:w-full md:grid-cols-2 lg:grid-cols-3">
+            <div
+                class="technology rounded-3xl border border-gray-100 bg-white p-8 py-12 shadow-2xl shadow-gray-600/30 sm:p-12">
+                <div class="space-y-12 text-center">
+                    <img src="../Images/stairs.png" class="mx-auto h-14 w-auto">
+                    <div class="space-y-6">
+                        <div class="technology-title text-2xl font-semibold text-gray-800 transition">First feature
+                        </div>
+                        <div class="technology-info text-gray-600">Lorem ipsum dolor sit amet consectetur, adipisicing
+                            elit. Saepe
+                            nesciunt
+                            neque culpa hic illum ab qui error repellendus asperiores unde ut ipsam perferendis nemo
+                            fuga
+                            cum,
+                            eum consectetur, magnam doloremque!</div>
+                        <div class="next-btn rounded-full border border-gray-200 bg-gray-100 w-fit mx-auto px-4 py-2">
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div
+                class="technology rounded-3xl border border-gray-100 bg-white p-8 py-12 shadow-2xl shadow-gray-600/30 sm:p-12">
+                <div class="space-y-12 text-center">
+                    <img src="../Images/rocket.png" class="mx-auto h-14 w-auto">
+                    <div class="space-y-6">
+                        <div class="technology-title text-2xl font-semibold text-gray-800 transition">Second feature
+                        </div>
+                        <div class="technology-info text-gray-600">Lorem ipsum dolor sit amet consectetur, adipisicing
+                            elit. Saepe nesciunt neque culpa hic illum ab qui error repellendus asperiores unde ut ipsam
+                            perferendis nemo fuga cum, eum consectetur, magnam doloremque!</div>
+                        <div class="next-btn rounded-full border border-gray-200 bg-gray-100 w-fit mx-auto px-4 py-2">
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div
+                class="technology rounded-3xl border border-gray-100 bg-white p-8 py-12 shadow-2xl shadow-gray-600/30 sm:p-12">
+                <div class="space-y-12 text-center">
+                    <img src="../Images/cubes.png" class="mx-auto h-14 w-auto">
+                    <div class="space-y-6">
+                        <div class="technology-title text-2xl font-semibold text-gray-800 transition">Third feature
+                        </div>
+                        <div class="technology-info text-gray-600">Lorem ipsum dolor sit amet consectetur, adipisicing
+                            elit. Saepe
+                            nesciunt
+                            neque culpa hic illum ab qui error repellendus asperiores unde ut ipsam perferendis nemo
+                            fuga
+                            cum,
+                            eum consectetur, magnam doloremque!</div>
+                        <div class="next-btn rounded-full border border-gray-200 bg-gray-100 w-fit mx-auto px-4 py-2">
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- leaders -->
+    <div class="leaders-section mt-40 max-w-5xl mx-auto lg:px-0 md:px-4 px-8">
+        <div class="team-main-text">
+            <div class="title text-center text-3xl font-bold text-gray-800 md:text-4xl xl:text-5xl">Trusted by leaders
+            </div>
+            <div class="small-text text-center mx-0 md:mx-20 lg:mx-36 my-8 text-gray-700">A growing team doesn't need to
+                mean growing pains. Privacy, and the right tool for every step of your journey - Jira Software friction
+                - company size.</div>
+        </div>
+        <div class="mt-12 grid gap-8 md:grid-cols-2">
+            <div
+                class="rounded-3xl border border-gray-100 bg-white p-8 shadow-2xl shadow-gray-600/10 sm:col-span-2 sm:px-12 lg:col-span-1 lg:row-span-2">
+                <div class="flex h-full flex-col justify-center space-y-6 md:space-y-8">
+                    <img src="../Images/microsoft.svg" class="mr-auto h-12 w-auto">
+                    <div class="text-gray-600 dark:text-gray-300 md:text-lg lg:text-xl">
+                        " Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat repellat perspiciatis
+                        excepturi est. Non ipsum iusto aliquam consequatur repellat provident, omnis ut, sapiente
+                        voluptates veritatis cum deleniti repudiandae ad doloribus.
+
+                        Esse, sint sit aut ducimus ea ipsam velit saepe earum dolorem, dignissimos minima voluptate quo
+                        accusamus corporis, quaerat beatae aliquid. Impedit, accusamus. "
+                    </div>
+                    <div class="flex items-center gap-3">
+                        <img src="../Images/avatar-2.webp" class="h-12 w-12 rounded-full">
+                        <div>
+                            <div class="text-lg font-semibold leading-none text-gray-600">Andy Doe
+                            </div>
+                            <div class="text-sm text-gray-500">Product Designer</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="space-y-6 rounded-3xl border border-gray-100 bg-white p-8 shadow-2xl shadow-gray-600/10">
+                <img src="../Images/airbnb.svg" class="h-12 w-auto">
+                <div class="text-gray-600 dark:text-gray-300">
+                    "Sit amet consectetur adipisicing elit. Quaerat repellat perspiciatis excepturi est. Provident,
+                    omnis ut, sapiente veritatis cum deleniti repudiandae ad doloribus. "
+                </div>
+                <div class="flex items-center gap-3">
+                    <img src="../Images/avatar-3.webp" class="h-12 w-12 rounded-full">
+                    <div>
+                        <div class="text-lg font-semibold leading-none text-gray-600">Janet Doe
+                        </div>
+                        <div class="text-sm text-gray-500">UX Designer</div>
+                    </div>
+                </div>
+            </div>
+            <div class="space-y-6 rounded-3xl border border-gray-100 bg-white p-8 shadow-2xl shadow-gray-600/10">
+                <img src="../Images/ge.svg" class="h-12 w-auto">
+                <div class="text-gray-600 dark:text-gray-300">
+                    "Sit amet consectetur adipisicing elit. Quaerat repellat perspiciatis excepturi est. Provident,
+                    omnis ut, sapiente veritatis cum deleniti repudiandae ad doloribus. "
+                </div>
+                <div class="flex items-center gap-3">
+                    <img src="../Images/avatar-4.webp" class="h-12 w-12 rounded-full">
+                    <div>
+                        <div class="text-lg font-semibold leading-none text-gray-600">John Doe
+                        </div>
+                        <div class="text-sm text-gray-500">Product Designer</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- font awsome -->
     <script src="https://kit.fontawesome.com/f900e39f72.js" crossorigin="anonymous"></script>
 </body>
