--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@
                             <div
                                 class="absolute inset-0 z-10 flex translate-y-0 scale-100 items-end overflow-hidden px-6 opacity-100 transition duration-500 sm:px-10">
                                 <img src="../Images/tailus-home.webp"
-                                    class="mx-auto h-80 w-96 rounded-t-3xl border object-cover object-top shadow-2xl dark:border-transparent sm:h-[28rem]">
+                                    class="mx-auto h-80 w-96 rounded-t-3xl border object-cover object-top shadow-2xl sm:h-[28rem]">
                             </div>
                         </div>
                     </div>
@@ -290,7 +290,7 @@
                 class="rounded-3xl border border-gray-100 bg-white p-8 shadow-2xl shadow-gray-600/10 sm:col-span-2 sm:px-12 lg:col-span-1 lg:row-span-2">
                 <div class="flex h-full flex-col justify-center space-y-6 md:space-y-8">
                     <img src="../Images/microsoft.svg" class="mr-auto h-12 w-auto">
-                    <div class="text-gray-600 dark:text-gray-300 md:text-lg lg:text-xl">
+                    <div class="text-gray-600 md:text-lg lg:text-xl">
                         " Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat repellat perspiciatis
                         excepturi est. Non ipsum iusto aliquam consequatur repellat provident, omnis ut, sapiente
                         voluptates veritatis cum deleniti repudiandae ad doloribus.
@@ -310,7 +310,7 @@
             </div>
             <div class="space-y-6 rounded-3xl border border-gray-100 bg-white p-8 shadow-2xl shadow-gray-600/10">
                 <img src="../Images/airbnb.svg" class="h-12 w-auto">
-                <div class="text-gray-600 dark:text-gray-300">
+                <div class="text-gray-600">
                     "Sit amet consectetur adipisicing elit. Quaerat repellat perspiciatis excepturi est. Provident,
                     omnis ut, sapiente veritatis cum deleniti repudiandae ad doloribus. "
                 </div>
@@ -325,7 +325,7 @@
             </div>
             <div class="space-y-6 rounded-3xl border border-gray-100 bg-white p-8 shadow-2xl shadow-gray-600/10">
                 <img src="../Images/ge.svg" class="h-12 w-auto">
-                <div class="text-gray-600 dark:text-gray-300">
+                <div class="text-gray-600">
                     "Sit amet consectetur adipisicing elit. Quaerat repellat perspiciatis excepturi est. Provident,
                     omnis ut, sapiente veritatis cum deleniti repudiandae ad doloribus. "
                 </div>
