added the improvment section

--- a/src/index.html
+++ b/src/index.html
@@ -341,6 +341,44 @@
         </div>
     </div>
 
+    <!-- improvment section -->
+    <div class="improvment-section border-y mt-40 border-gray-200 bg-gray-100 h-fit">
+        <div class="max-w-5xl mx-auto lg:px-0 md:px-4 px-8">
+            <div class="relative mx-auto px-6 md:max-w-full md:px-12 lg:max-w-6xl xl:px-0">
+                <div class="items-end justify-between md:flex">
+                    <div class="h-max py-16 md:w-6/12 xl:w-5/12">
+                        <div class="text-center md:text-left">
+                            <div class="text-3xl font-bold text-gray-800 md:w-max md:text-4xl xl:text-5xl">
+                                One step to improve <br>
+                                your workflow</div>
+                            <div class="mb-8 mt-6 text-gray-600">
+                                Praesentium, atque exercitationem dolorum, iste libero eaque animi illum magnam velit
+                                iusto quidem omnis quas! Ad expedita quaerat.
+                            </div>
+                            <form class="mt-12">
+                                <div
+                                    class="input-part flex gap-2 border items-center pt-2 pb-2 pr-2 pl-5 rounded-full my-10 shadow-[0px_2px_4px_rgba(0,0,0,0.1)] bg-white">
+                                    <i class="fa-solid fa-envelope text-gray-400"></i>
+                                    <input type="text" placeholder="Your mail address"
+                                        class="flex-grow ml-2 outline-none">
+                                    <button
+                                        class="bg-blue-700 px-3 py-2 rounded-full text-white hover:bg-blue-800 transition hidden md:block">Get
+                                        started</button>
+                                    <button
+                                        class="bg-blue-700 px-3 py-2 rounded-full text-white hover:bg-blue-800 transition md:hidden block"><i
+                                            class="fa-solid fa-paper-plane"></i></button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="md:w-[42%] lg:w-1/2">
+                        <img src="../Images/stats-login.webp" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- font awsome -->
     <script src="https://kit.fontawesome.com/f900e39f72.js" crossorigin="anonymous"></script>
 </body>
