finished the footer

--- a/src/index.html
+++ b/src/index.html
@@ -379,6 +379,69 @@
         </div>
     </div>
 
+    <!-- footer -->
+    <footer class="border-t border-gray-100 pt-32 pb-8">
+        <div>
+            <div class="m-auto space-y-8 px-8 text-gray-600 max-w-5xl lg:px-0">
+                <div class="grid grid-cols-8 gap-6 md:gap-0">
+                    <div class="col-span-8 md:col-span-2 lg:col-span-3">
+                        <div
+                            class="flex h-full items-center justify-between gap-6 border-b border-white py-6 md:flex-col md:items-start md:justify-between md:space-y-6 md:border-none md:py-0">
+                            <div>
+                                <div class="logo font-medium text-2xl text-gray-800">ampire</div>
+                                <div class="mt-2 inline-block text-sm">Designed by <span class="font-semibold">zuhayb
+                                        faysal</span></div>
+                            </div>
+                            <div class="flex gap-6">
+                                <i class="hover:text-blue-500 cursor-pointer fa-brands fa-github"></i>
+                                <i class="hover:text-blue-500 cursor-pointer fa-brands fa-twitter"></i>
+                                <i class="hover:text-blue-500 cursor-pointer fa-brands fa-medium"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-span-8 md:col-span-6 lg:col-span-5">
+                        <div class="grid grid-cols-2 gap-6 pb-16 sm:grid-cols-3 md:pl-16">
+                            <div>
+                                <div class="text-base font-medium text-gray-800">Company</div>
+                                <ul class="mt-4 list-inside space-y-4">
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">About</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Customers</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Enterprise</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Partners</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Jobs</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <div class="text-base font-medium text-gray-800">Products</div>
+                                <ul class="mt-4 list-inside space-y-4">
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">About</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Customers</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Enterprise</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Partners</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Jobs</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <div class="text-base font-medium text-gray-800">Resources</div>
+                                <ul class="mt-4 list-inside space-y-4">
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">About</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Customers</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Enterprise</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Partners</li>
+                                    <li class="text-sm duration-100 hover:text-blue-500 cursor-pointer">Jobs</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="flex justify-between text-sm md:pl-16">
+                            <span>© zuhayb 2024 - Present</span>
+                            <span>All right reserved</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- font awsome -->
     <script src="https://kit.fontawesome.com/f900e39f72.js" crossorigin="anonymous"></script>
 </body>
